# mmp-exporter

./: .editorconfig  .gitignore  README.md  dashboard.json  pyproject.toml  shell.nix
.github/workflows/: main.yaml
nixos/: default.nix  module.nix  overlay.nix  vm_test.nix
nixos/npins/: sources.json
nixos/pkgs/: mmp-exporter.nix
src/emulator/: main.py
src/exporter/: main.py
src/exporter/tests/: test_mmp_parser.py
